Fixed issues and styles on smaller screens, added mobile navigation behaviour.

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,12 @@ body {
   background-color: #f3f4f6;
   color: #2c363f;
   font-size: 16px;
+  overflow-x: hidden;
+}
+@media screen and (max-width: 640px) {
+  html {
+    font-size: 14px;
+  }
 }
 img {
   max-width: 100%;
@@ -105,6 +111,15 @@ Specific use-case with side by side articles:
 }
 .padd-bottom {
   padding-bottom: 5rem;
+}
+
+@media screen and (max-width: 640px) {
+  .padd-top {
+    padding-top: 3rem;
+  }
+  .padd-bottom {
+    padding-bottom: 3rem;
+  }
 }
 
 /*Row Containers*/
@@ -206,9 +221,9 @@ p {
 .script-title {
   font-family: 'Parisienne', cursive;
   color: white;
-  line-height: 1;
-  padding-bottom: 2rem;
-  font-size: 4rem;
+  line-height: 1.2;
+  padding-bottom: 2em;
+  font-size: 3.3rem;
   text-align: center;
 }
 .script-subtitle {
@@ -224,7 +239,7 @@ p {
   font-weight: 300;
 }
 .text-subtitle {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   line-height: 1.3;
   color: #fff;
   text-align: center;
@@ -232,6 +247,7 @@ p {
 }
 .text-paragraph {
   color: #6b7278;
+  font-size: 1rem;
 }
 
 .text-shaddow {
@@ -243,6 +259,7 @@ p {
   border-radius: 10%;
   padding: 0 5px;
 }
+
 
 /*** Buttons ***/
 
@@ -421,6 +438,31 @@ Section ***/
   display: block;
 }
 
+@media screen and (max-width: 1300px) {
+  .main-landing_page .flex-row .col-3 {
+    flex: 0 0 70%;
+  }
+}
+@media screen and (max-width: 980px){
+  .main-landing_page .flex-row .col-3 {
+    flex: 0 0 90%;
+  }
+}
+@media screen and (max-width: 640px) {
+  .main-landing_page {
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+  }
+  .main-textbox .text-title {
+    font-size: 2.1rem;
+    text-align: left;
+  }
+}
+
 
 /*** Product Groups
 Section ***/
@@ -498,24 +540,75 @@ Section ***/
 }
 
 /*Product card inner animation*/
-.product-card:hover .product-card_hidden {
+.product-card:hover .product-card_hidden, .product-card:focus .product-card_hidden {
   transform: translateX(0);
 }
-.product-card:nth-of-type(even):hover .product-card_hidden {
+.product-card:nth-of-type(even):hover .product-card_hidden, .product-card:nth-of-type(even):focus .product-card_hidden {
   transform: translateX(-200%)
 }
-.product-card:hover .product-card_content {
+.product-card:hover .product-card_content, .product-card:focus .product-card_content {
   transform: translateX(-33.3%);
 }
-.product-card:nth-of-type(even):hover .product-card_content {
+.product-card:nth-of-type(even):hover .product-card_content, .product-card:nth-of-type(even):focus .product-card_content {
   transform: translateX(33.3%);
 }
 
+@media screen and (max-width: 640px) {
+
+  .product-card {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    height: 200px;
+    margin: 0 auto 20px auto;
+  }
+  .product-card_hidden, .product-card:nth-of-type(even) .product-card_hidden {
+    top: 65%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    transform: translateY(100%)
+  }
+  .product-card_content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 100%;
+  }
+  .product-card_content > .col-2, .product-card_content > .col-4  {
+    flex: none;
+  }
+
+  .product-card_image {
+    height: 65%;
+    order: 1;
+
+  }
+  .product-card_description {
+    height: 35%;
+    order: 2;
+    display: flex;
+  }
+  /* Product inner animation for moving content */
+  .product-card:hover .product-card_content, .product-card:focus .product-card_content, .product-card:nth-of-type(even):hover .product-card_content, .product-card:nth-of-type(even):focus .product-card_content {
+    transform: translateY(-33.3%);
+  }
+  /* Product inner animation for moving hidden content */
+  .product-card:hover .product-card_hidden, .product-card:focus .product-card_hidden, .product-card:nth-of-type(even):hover .product-card_hidden, .product-card:nth-of-type(even):focus .product-card_hidden {
+    transform: translateY(0);
+  }
+  /* Shadow animations */
+  .product-card:hover, .product-card:focus, .product-card:nth-of-type(even):hover, .product-card:nth-of-type(even):focus {
+    box-shadow: 0px 30px 60px -50px rgba(255,0,0,0.3);
+  }
+
+}
 
 /*** Key Values
 Section ***/
-.main-values_section {
-  background-color: ;
+
 }
 .main-values_intro p {
   padding-bottom: 1em;
@@ -536,9 +629,8 @@ Section ***/
 .main-about_section {
   background-color: #6b7278;
 }
-.main-about_section .script-subtitle {
+.main-about_section .script-title {
   color: #fff;
-  font-size: 3.5rem;
   line-height: 1.2;
   text-align: right;
 }
@@ -559,8 +651,9 @@ Section ***/
     margin-bottom: 2rem;
     height: 400px;
   }
-  .main-about_section .text-subtitle {
+  .main-about_section .script-title {
     text-align: center;
+    font-size: 3rem;
   }
 }
   /* transform: rotate(-10deg);
@@ -586,7 +679,7 @@ Section ***/
 .main-promo_block p {
   color: #fff;
 }
-.main-promo_block .text-title {
+.main-promo_block .script-title {
   font-size: 3.5rem;
   line-height: 1.2;
   text-align: center;
